--- a/main/res/anim/content_like.xml
+++ b/main/res/anim/content_like.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shareInterpolator="false">
+    android:interpolator="@android:anim/linear_interpolator">
     <alpha
-        android:interpolator="@android:anim/linear_interpolator"
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
         android:duration="150" />
     <scale
-        android:interpolator="@android:anim/linear_interpolator"
         android:fromXScale="0.5"
         android:toXScale="1.0"
         android:fromYScale="0.5"
@@ -17,7 +15,6 @@
         android:pivotY="50%"
         android:duration="150" />
     <alpha
-        android:interpolator="@android:anim/linear_interpolator"
         android:fromAlpha="1.0"
         android:toAlpha="0.0"
         android:duration="800"
