--- a/main/res/layout/list_item_object.xml
+++ b/main/res/layout/list_item_object.xml
@@ -9,14 +9,14 @@
     android:paddingBottom="15dp"
     android:paddingLeft="20dp">
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@+id/title"
         android:textSize="22sp" />
     <TextView
-        android:id="@+id/detail"
-        android:layout_below="@id/title"
+        android:id="@+id/author"
+        android:layout_below="@id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@+id/detail"
