--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="content_background">#ffffff</color>
     <color name="app_background">#eeeeee</color>
     <color name="like">#eb5b54</color>
+    <color name="background_text">#d2d2d2</color>
+    <color name="text">#333333</color>
 </resources>
