improved structure of ContentView class

--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="like">#eb5b54</color>
     <color name="background_text">#d2d2d2</color>
     <color name="text">#333333</color>
+    <color name="link">#75920d</color>
 </resources>
