--- a/main/res/layout/activity_compose.xml
+++ b/main/res/layout/activity_compose.xml
@@ -2,21 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ComposeActivity">
-
-    <EditText
-        android:id="@+id/object_title"
-        android:inputType="textMultiLine"
-        android:lines="8"
-        android:minLines="6"
-        android:gravity="top|left"
-        android:maxLines="10"
-        android:layout_height="wrap_content"
+    android:background="@color/app_background"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    tools:context=".ComposeActivity"
+    >
+    <com.example.geotag.view.ComposeView
+        android:id="@+id/compose_view"
+        android:layout_height="fill_parent"
         android:layout_width="fill_parent"
-        android:scrollbars="vertical" />
-
+        />
 </RelativeLayout>
