--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -8,4 +8,5 @@
     android:paddingBottom="5dp"
     android:clipToPadding="false"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent" />
+    android:layout_width="fill_parent"
+    />
