--- a/main/res/layout/activity_compose.xml
+++ b/main/res/layout/activity_compose.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="5dp"
     tools:context=".ComposeActivity"
     >
-    <com.example.geotag.view.ComposeView
+    <com.sundowner.view.ComposeView
         android:id="@+id/compose_view"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
