consistent text size when composing content

--- a/main/res/layout/view_compose.xml
+++ b/main/res/layout/view_compose.xml
@@ -14,7 +14,8 @@
         android:id="@+id/text"
         android:inputType="textMultiLine"
         android:minLines="4"
-        android:gravity="top|left"
+        android:gravity="top"
+        android:textSize="22sp"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
         android:paddingTop="3dp"
