added Facebook login

--- a/main/res/layout/view_compose.xml
+++ b/main/res/layout/view_compose.xml
@@ -24,10 +24,10 @@
         android:layout_width="fill_parent"
         />
     <TextView
+        style="@style/ContentAuthor"
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/darker_gray"
         android:text="by James"
         android:textSize="12sp"
         />
