--- a/main/res/layout/view_content.xml
+++ b/main/res/layout/view_content.xml
@@ -17,11 +17,11 @@
         android:textSize="22sp"
         />
     <TextView
+        style="@style/ContentAuthor"
         android:id="@+id/author"
         android:layout_below="@id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
         />
     <com.sundowner.view.LikeContentView
