--- a/main/res/layout/activity_logged_out.xml
+++ b/main/res/layout/activity_logged_out.xml
@@ -3,27 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="10dp"
-    android:layout_height="match_parent">
-
+    android:padding="20dp"
+    android:layout_height="match_parent"
+    >
     <TextView
         android:text="@string/app_name"
         android:textStyle="bold"
         android:layout_gravity="left"
         android:textSize="30sp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:layout_width="wrap_content"
+        />
     <TextView
         android:text="@string/intro"
         android:layout_gravity="left"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
     <fragment
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/fbLoginFragment"
         android:name="com.sundowner.view.FBLoginFragment"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
-
+        android:layout_width="wrap_content"
+        />
 </LinearLayout>
