--- a/main/res/layout/activity_compose.xml
+++ b/main/res/layout/activity_compose.xml
@@ -1,15 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     tools:context=".ComposeActivity"
     >
     <com.sundowner.view.ComposeView
+        android:background="@android:color/transparent"
         android:id="@+id/compose_view"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         />
 </RelativeLayout>
