--- a/main/res/layout/view_content.xml
+++ b/main/res/layout/view_content.xml
@@ -10,10 +10,10 @@
     android:paddingLeft="20dp"
     >
     <TextView
+        style="@style/ContentText"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@+id/title"
         android:textSize="22sp"
         />
     <TextView
