--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -4,7 +4,10 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style
+        name="AppBaseTheme"
+        parent="android:Theme.Light"
+        >
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -13,35 +16,62 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-
-    <style name="IntroTheme" parent="AppTheme">
+    <style
+        name="AppTheme"
+        parent="AppBaseTheme"
+        >
+        <item name="android:background">@color/app_background</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">#33B5E5</item>
-        <item name="android:textColor">#ffffff</item>
     </style>
 
-    <style name="ReadTheme" parent="AppTheme">
+    <style
+        name="IntroTheme"
+        parent="AppTheme"
+        >
+        <item name="android:textColor">@color/text_intro</item>
+    </style>
+
+    <style
+        name="ReadTheme"
+        parent="AppTheme"
+        >
+        <item name="android:windowNoTitle">false</item>
         <item name="android:listViewStyle">@style/ListViewStyle</item>
         <item name="android:actionBarStyle">@style/ActionBarStyle</item>
     </style>
 
-    <style name="WriteTheme" parent="AppTheme">
-        <item name="android:background">#33B5E5</item>
+    <style
+        name="WriteTheme"
+        parent="AppTheme"
+        >
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:actionBarStyle">@style/ActionBarStyle</item>
     </style>
 
     <style name="ListViewStyle">
-        <item name="android:background">#33B5E5</item>
+        <item name="android:divider">@null</item>
+        <item name="android:dividerHeight">0dp</item>
     </style>
 
-    <style name="ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">#33B5E5</item>
+    <style
+        name="ActionBarStyle"
+        parent="@android:style/Widget.Holo.Light.ActionBar"
+        >
+        <item name="android:background">@color/app_background</item>
+    </style>
+
+    <style name="WriteContentText">
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="ContentText">
+        <item name="android:textColor">@color/text</item>
+        <item name="android:background">@color/content_background</item>
     </style>
 
     <style name="ContentAuthor">
-        <item name="android:textColor">#33B5E5</item>
+        <item name="android:textColor">@color/app_background</item>
+        <item name="android:background">@color/content_background</item>
     </style>
 
 </resources>
