--- a/main/res/menu/compose.xml
+++ b/main/res/menu/compose.xml
@@ -3,9 +3,6 @@
         android:id="@+id/action_accept"
         android:icon="@drawable/ic_action_accept"
         android:title="@string/action_accept"
-        android:showAsAction="always" />
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="always"
+        />
 </menu>
