--- a/main/res/anim/content_like.xml
+++ b/main/res/anim/content_like.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/linear_interpolator">
+    android:interpolator="@android:anim/linear_interpolator"
+    >
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="150" />
+        android:duration="150"
+        />
     <scale
         android:fromXScale="0.5"
         android:toXScale="1.0"
@@ -13,10 +15,12 @@
         android:toYScale="1.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="150" />
+        android:duration="150"
+        />
     <alpha
         android:fromAlpha="1.0"
         android:toAlpha="0.0"
         android:duration="800"
-        android:startOffset="500"/>
+        android:startOffset="500"
+        />
 </set>
