--- a/main/res/menu/read.xml
+++ b/main/res/menu/read.xml
@@ -1,10 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:icon="@drawable/ic_action_settings"
-        android:showAsAction="always" />
-    <item android:id="@+id/action_compose"
-          android:icon="@drawable/ic_action_compose"
-          android:title="@string/action_compose"
-          android:showAsAction="always" />
+    <item
+        android:id="@+id/action_compose"
+        android:icon="@drawable/ic_action_compose"
+        android:title="@string/action_compose"
+        android:showAsAction="always"
+        />
 </menu>
