--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background_text">#d2d2d2</color>
     <color name="text">#333333</color>
     <color name="text_intro">#ffffff</color>
+    <color name="url_indicator_tab">#FFBB33</color>
 </resources>
